--- a/index.html
+++ b/index.html
@@ -96,13 +96,7 @@
       background: var(--color-secondary);
     }
    
-    /* Logo */
-    .slide-logo {
-      position: absolute;
-      top: 40px;
-      right: 80px;
-      height: 40px;
-    }
+    
    
     /* Typography */
     .eyebrow {
@@ -576,13 +570,23 @@
 
       .presentation-container {
         margin-left: 0;
+        margin-top: 0;
+      }
+
+      .presentation-header {
+        left: 0;
       }
     }
   </style>
 </head>
 <body>
   
-  <!-- Left Navigation Sidebar -->
+  
+  <!-- Top Header -->
+  <header class="presentation-header">
+    <h1>POC Analysis</h1>
+  </header>
+<!-- Left Navigation Sidebar -->
   <nav class="left-nav">
     <div class="left-nav-logo">
       <svg viewBox="0 0 168.12 75.54" xmlns="http://www.w3.org/2000/svg">
@@ -604,33 +608,25 @@
     .left-nav-logo {
       display: flex;
       align-items: center;
-      padding: 12px 16px;
-      margin-bottom: 32px;
+      justify-content: center;
+      padding: 20px 16px;
+      margin-bottom: 24px;
     }
 
     .left-nav-logo svg {
-      height: 32px;
+      height: 36px;
       width: auto;
     }
 
-    .left-nav-logo-text {
-      font-size: 20px;
-      font-weight: 600;
-      color: var(--color-secondary);
-      margin-left: 12px;
-      padding-left: 12px;
-      border-left: 2px solid var(--color-gray-light);
-    }
-
     .nav-section-title {
-      font-size: 12px;
-      font-weight: 700;
-      color: var(--color-gray-medium);
+      font-size: 11px;
+      font-weight: 600;
+      color: #A1A1AA;
       text-transform: uppercase;
-      letter-spacing: 0.05em;
-      padding: 8px 16px;
-      margin-top: 24px;
-      margin-bottom: 8px;
+      letter-spacing: 0.08em;
+      padding: 12px 24px 8px 24px;
+      margin-top: 16px;
+      margin-bottom: 4px;
     }
 
     .nav-section-title:first-of-type {
@@ -640,42 +636,82 @@
     .nav-item {
       display: flex;
       align-items: center;
-      padding: 14px 16px;
-      margin: 4px 0;
-      border-radius: 8px;
-      color: var(--color-gray-dark);
+      padding: 12px 16px;
+      margin: 2px 8px;
+      border-radius: 6px;
+      color: #52525B;
       cursor: pointer;
-      transition: all 0.2s;
+      transition: all 0.15s;
       text-decoration: none;
       font-size: 15px;
       font-weight: 500;
+      line-height: 1.4;
     }
 
     .nav-item:hover {
-      background: #E5EAEB;
-      color: var(--color-secondary);
+      background: #F4F4F5;
+      color: #18181B;
     }
 
     .nav-item.active {
       background: var(--color-secondary);
       color: white;
-      font-weight: 600;
+      font-weight: 500;
     }
 
     .nav-item-icon {
       width: 20px;
-      margin-right: 12px;
-      font-size: 18px;
+      margin-right: 10px;
+      font-size: 16px;
       display: flex;
       align-items: center;
       justify-content: center;
+      opacity: 0.7;
+      color: inherit;
+    }
+
+    .nav-item.active .nav-item-icon {
+      opacity: 1;
     }
 
     .nav-item-arrow {
       margin-left: auto;
-      font-size: 14px;
-      opacity: 0.5;
+      font-size: 16px;
+      opacity: 0.4;
     }
+
+    .nav-item.active .nav-item-arrow {
+      opacity: 0.8;
+    }
+
+    /* Top Right Header */
+    .presentation-header {
+      position: fixed;
+      top: 0;
+      left: 280px;
+      right: 0;
+      height: 70px;
+      background: white;
+      border-bottom: 1px solid var(--color-gray-light);
+      display: flex;
+      align-items: center;
+      padding: 0 40px;
+      z-index: 999;
+    }
+
+    .presentation-header h1 {
+      font-size: 20px;
+      font-weight: 600;
+      color: var(--color-secondary);
+      margin: 0;
+    }
+
+    /* Adjust slides to account for header */
+    .presentation-container {
+      margin-left: 280px;
+      margin-top: 70px;
+    }
+
 
 </style></defs>
         <polygon class="cls-2" points="12.57 46.92 30.91 65.22 49.25 46.92 30.91 28.62 12.57 46.92"/>
@@ -693,50 +729,50 @@
     <div class="nav-section-title">Presentation</div>
 
     <a class="nav-item" data-slide="2">
-      <span class="nav-item-icon">📋</span>
+      <span class="nav-item-icon">☰</span>
       <span>Overview</span>
     </a>
 
     <a class="nav-item" data-slide="3">
-      <span class="nav-item-icon">📊</span>
+      <span class="nav-item-icon">◫</span>
       <span>Executive Summary</span>
     </a>
 
     <div class="nav-section-title">Analysis</div>
 
     <a class="nav-item" data-slide="5">
-      <span class="nav-item-icon">📈</span>
+      <span class="nav-item-icon">↗</span>
       <span>Data Analysis</span>
       <span class="nav-item-arrow">›</span>
     </a>
 
     <a class="nav-item" data-slide="9">
-      <span class="nav-item-icon">⚠️</span>
+      <span class="nav-item-icon">⚠</span>
       <span>Gap Identification</span>
     </a>
 
     <div class="nav-section-title">Solutions</div>
 
     <a class="nav-item" data-slide="10">
-      <span class="nav-item-icon">💡</span>
+      <span class="nav-item-icon">◉</span>
       <span>Socure Solutions</span>
       <span class="nav-item-arrow">›</span>
     </a>
 
     <a class="nav-item" data-slide="16">
-      <span class="nav-item-icon">💰</span>
+      <span class="nav-item-icon">$</span>
       <span>ROI Projections</span>
     </a>
 
     <div class="nav-section-title">Next Steps</div>
 
     <a class="nav-item" data-slide="17">
-      <span class="nav-item-icon">🚀</span>
+      <span class="nav-item-icon">→</span>
       <span>Recommendations</span>
     </a>
 
     <a class="nav-item" data-slide="18">
-      <span class="nav-item-icon">✉️</span>
+      <span class="nav-item-icon">✉</span>
       <span>Contact</span>
     </a>
   </nav>
@@ -745,16 +781,7 @@
    
     <!-- Slide 1: Title -->
     <div class="slide content-center">
-      <svg class="slide-logo" viewBox="0 0 168.12 75.54" xmlns="http://www.w3.org/2000/svg">
-        <polygon fill="#ff6900" points="30.91 10.32 12.57 28.62 30.91 46.92 49.25 28.62 30.91 10.32"/>
-        <polygon fill="#ff8200" points="12.57 46.92 30.91 65.22 49.25 46.92 30.91 28.62 12.57 46.92"/>
-        <path fill="#1c1c4c" d="M58.17,44.11l2.44-2.92c1.69,1.39,3.46,2.27,5.6,2.27,1.69,0,2.71-.67,2.71-1.77v-.05c0-1.04-.64-1.58-3.78-2.38-3.78-.96-6.22-2.01-6.22-5.72v-.05c0-3.4,2.73-5.65,6.57-5.65,2.74,0,5.07,.86,6.97,2.38l-2.15,3.1c-1.66-1.15-3.3-1.85-4.88-1.85s-2.41,.72-2.41,1.63v.05c0,1.23,.8,1.63,4.05,2.46,3.81,.99,5.95,2.36,5.95,5.62v.05c0,3.72-2.84,5.81-6.89,5.81-2.84,0-5.71-.99-7.96-3"/>
-        <path fill="#1c1c4c" d="M86.41,39.75v-.05c0-2.11-1.53-3.96-3.78-3.96s-3.73,1.79-3.73,3.91v.05c0,2.11,1.53,3.96,3.78,3.96s3.73-1.79,3.73-3.91m-11.53,0v-.05c0-4.12,3.33-7.46,7.8-7.46s7.75,3.29,7.75,7.41v.05c0,4.12-3.33,7.46-7.8,7.46s-7.75-3.29-7.75-7.41"/>
-        <path fill="#1c1c4c" d="M92.17,39.75v-.05c0-4.09,3.14-7.46,7.54-7.46,2.71,0,4.4,.91,5.74,2.41l-2.49,2.68c-.91-.96-1.82-1.58-3.27-1.58-2.04,0-3.49,1.79-3.49,3.91v.05c0,2.19,1.42,3.96,3.65,3.96,1.37,0,2.31-.59,3.3-1.53l2.39,2.41c-1.39,1.52-3,2.62-5.87,2.62-4.32,0-7.48-3.32-7.48-7.41"/>
-        <path fill="#1c1c4c" d="M107.56,41.79v-9.28h4.08v8c0,1.93,.91,2.92,2.47,2.92s2.55-.99,2.55-2.92v-8h4.08v14.34h-4.08v-2.03c-.94,1.2-2.15,2.3-4.21,2.3-3.08,0-4.88-2.03-4.88-5.32"/>
-        <path fill="#1c1c4c" d="M123.87,32.5h4.08v2.89c.83-1.98,2.17-3.26,4.58-3.16v4.25h-.21c-2.71,0-4.37,1.63-4.37,5.06v5.3h-4.08v-14.34h0Z"/>
-        <path fill="#1c1c4c" d="M143.6,38.55c-.24-1.82-1.31-3.05-3.03-3.05s-2.79,1.2-3.11,3.05h6.14Zm-10.14,1.2v-.05c0-4.09,2.92-7.46,7.11-7.46,4.8,0,7,3.72,7,7.79,0,.32-.03,.7-.05,1.07h-10c.4,1.85,1.69,2.81,3.51,2.81,1.37,0,2.36-.43,3.49-1.47l2.33,2.06c-1.34,1.66-3.27,2.68-5.87,2.68-4.32,0-7.51-3.02-7.51-7.41"/>
-      </svg>
+      
       <div class="eyebrow">Proof of Concept Analysis</div>
       <h1 class="slide-title large">Identity Verification<br/>Gap Analysis & Recommendations</h1>
       <p class="subtitle">Data-Driven Insights for Enhanced Fraud Prevention</p>
