--- a/index.html
+++ b/index.html
@@ -167,10 +167,7 @@
       top: 50%;
       transform: translateY(-50%);
       z-index: 1000;
-      background: white;
-      padding: 20px 12px;
-      border-radius: 24px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      padding: 0;
     }
    
     .slide-nav .dot {
